# CPPDrawing

./: .gitignore  LICENSE  README.md
RayMarch/: README.md
RayMarch/test1/: CMakeLists.txt
RayMarch/test1/src/: main.cpp  shader.cpp  shader.hpp
RayMarch/test1/src/shaders/: fragmentShader.glsl
RayMarch/test2/: CMakeLists.txt
RayMarch/test2/src/: main.cpp  shader.cpp  shader.hpp
RayMarch/test2/src/shaders/: fragmentShader.glsl
SFML/: README.md
SFML/Cloth/: CMakeLists.txt
SFML/Cloth/src/: cloth.hpp  constraints.hpp  main.cpp  particle.hpp
SFML/DummyFluid/: CMakeLists.txt
SFML/DummyFluid/src/: fluid.hpp  fps.hpp  main.cpp  utils.hpp
SFML/EulerianFluid/: CMakeLists.txt
SFML/EulerianFluid/.cache/clangd/index/: main.cpp.338BD34AE5B034C0.idx
SFML/EulerianFluid/src/: fluid.hpp  main.cpp
SFML/Fire/: CMakeLists.txt
SFML/Fire/.cache/clangd/index/: grid.hpp.E0EEFC0DB5A3228F.idx  main.cpp.564A22F98DEDF5A1.idx  particle.hpp.4842477248094250.idx  particleSim.hpp.06C5A8EAC199660A.idx  random.cpp.0185EEE3DA6C9F94.idx  random.hpp.D1EE6B94D61CEAE6.idx  thread_pool.hpp.B71213450DA919CC.idx
SFML/Fire/pics/: screenshot Mon  1 Apr 12:39:40 CEST 2024
SFML/Fire/src/: grid.hpp  main.cpp  particle.hpp  particleSim.hpp  quadtreeV2.hpp  random.cpp  random.hpp  thread_pool.hpp
SFML/Fire/src/helpers/: bloom.glsl
SFML/QuadTree/: CMakeLists.txt
SFML/QuadTree/src/: main.cpp  quadtree.hpp  quadtreeV2.hpp
SFML/Shapes/: CMakeLists.txt
SFML/Shapes/.cache/clangd/index/: main.cpp.338BD34AE5B034C0.idx  particle.hpp.CD05E5B150251847.idx
SFML/Shapes/dependencies/: CMakeLists.txt
SFML/Shapes/src/: main.cpp  particle.hpp
SFML/TEST/Boilerplate/: CMakeLists.txt
TEMPLATE/: CMakeLists.txt
TEMPLATE/src/: main.cpp  shader.hpp
compute_test/src/helpers/: RootDir.hpp.in
dunes/: CMakeLists.txt
dunes/.cache/clangd/index/: controls.cpp.AF682096EAC71E0F.idx  controls.hpp.093C1442CE55D06F.idx  imconfig.h.544AC7F67E450B52.idx  imgui.cpp.02A3E2EB54944187.idx  imgui.h.E9E9A575AA3CD5ED.idx  imgui_demo.cpp.ABF610C051E25AF5.idx  imgui_draw.cpp.42D917735BB7C05E.idx  imgui_impl_glfw.cpp.F82306D3C67C7799.idx  imgui_impl_glfw.h.6BF99A7DB9E70BA3.idx  imgui_impl_opengl3.cpp.00F93F958E28DF9C.idx  imgui_impl_opengl3.h.0A102FF5ECC5B88E.idx  imgui_impl_opengl3_loader.h.404AD3DFE7249565.idx  imgui_internal.h.9092517217306FC8.idx  imgui_tables.cpp.711332D6BD15E1FC.idx  imgui_widgets.cpp.02935408EC75B59F.idx  imstb_rectpack.h.25E272034D9F458A.idx  imstb_textedit.h.4A31A799CC744C6A.idx  imstb_truetype.h.525E665306FED325.idx  main.cpp.643399C3D9C6498D.idx  mesh.cpp.9928DE211B4E77B0.idx  mesh.hpp.3BF09D5C99DC520A.idx  shader.cpp.34D8A2CFDEE4B2AC.idx  shader.hpp.612C460AEF14F648.idx  texture.cpp.CEB3C9D859D0B874.idx  texture.hpp.939C01CF7E600E48.idx  texture2D.cpp.84497F74186D5713.idx  texture2D.hpp.5A9E8D41D05CA0C8.idx
dunes/assets/shaders/: TextureFragmentShader.glsl  TransformVertexShader.glsl  seaFragmentShader.glsl  seaVertexShader.glsl
dunes/imgs/: screenshot Mon 25 Mar 00:53:04 CET 2024  screenshot Mon 25 Mar 00:53:15 CET 2024  screenshot Mon 25 Mar 00:53:33 CET 2024  screenshot Sun 17 Mar 03:04:39 CET 2024
dunes/src/: controls.cpp  controls.hpp  main.cpp  mesh.cpp  shader.cpp  shader.hpp  texture.cpp  texture2D.cpp
dunes/src/imgui/: imgui_impl_glfw.cpp
falling_sand/: CMakeLists.txt  README.md
falling_sand/src/: main.cpp  shader.cpp  texture.cpp  texture.hpp
falling_sand/src/shaders/: computeShader.glsl  fragmentShader.glsl  vertexShader.glsl
gravity/: CMakeLists.txt
gravity/src/: main.cpp  shader.cpp  shader.hpp
gravity/src/shaders/: posVelShader.glsl  updateDrawShader.glsl
mandelbrot/: CMakeLists.txt
mandelbrot/src/: main.cpp  shader.hpp
mandelbrot/src/shaders/: fragmentShader.glsl  vertexShader.glsl
slime/: CMakeLists.txt  README.md
slime/src/: main.cpp
slime/src/shaders/: fadeCS.glsl  moveCS.glsl
terrainOpenGL/: CMakeLists.txt  README.md
terrainOpenGL/assets/shaders/: TextureFragmentShader.glsl  erosion_deposition.glsl  erosion_evaporation.glsl  erosion_flow.glsl  erosion_flow_velocity_field.glsl  erosion_source.glsl  erosion_transport.glsl  noise.glsl  seaFragmentShader.glsl  seaVertexShader.glsl  terrain.glsl  terrain_color.glsl  tesc.glsl  tese.glsl  water_fragment.glsl  water_tesc.glsl  water_tese.glsl
terrainOpenGL/imgs/: screenshot Fri 31 May 16:37:40 CEST 2024  screenshot Fri 31 May 16:41:55 CEST 2024  screenshot Fri 31 May 16:42:01 CEST 2024  screenshot Fri 31 May 16:48:18 CEST 2024  screenshot Fri 31 May 16:48:23 CEST 2024  screenshot Sun 17 Mar 03:04:32 CET 2024
terrainOpenGL/src/: controls.cpp  imgui_wrap.cpp  imgui_wrap.hpp  main.cpp  mesh.cpp  mesh.hpp  noise.cpp  noise.hpp  shader.cpp  shader.hpp  texture2D.cpp  texture2D.hpp
walk_in_the_dark/: CMakeLists.txt  README.md
walk_in_the_dark/src/: main.cpp
walk_in_the_dark/src/shaders/: computeShader.glsl
